tests/neg/source-import.scala
import language.`3.0`
import language.`3.0` // error

class C:
  import language.`3.0-migration` // error

